[gd_scene load_steps=9 format=2]

[ext_resource path="res://ШРИФТ/new_dynamicfont.tres" type="DynamicFont" id=1]
[ext_resource path="res://sprite/блоки/background/mountain2-export.png" type="Texture" id=2]
[ext_resource path="res://sprite/блоки/background/pine2-export.png" type="Texture" id=3]
[ext_resource path="res://sprite/блоки/background/sky-export.png" type="Texture" id=4]
[ext_resource path="res://sprite/блоки/background/pine1-export.png" type="Texture" id=5]
[ext_resource path="res://sprite/блоки/background/cloud-export.png" type="Texture" id=6]
[ext_resource path="res://NASTROIKI.gd" type="Script" id=7]
[ext_resource path="res://sprite/новый интерфейс/Back.png" type="Texture" id=8]

[node name="NASTROIKI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 7 )

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="Sky-export" type="Sprite" parent="StaticBody2D"]
position = Vector2( 407, 142.438 )
scale = Vector2( 0.125948, 0.137855 )
texture = ExtResource( 4 )

[node name="Mountain2-export" type="Sprite" parent="StaticBody2D"]
position = Vector2( 400, 224 )
scale = Vector2( 0.12064, 0.156496 )
texture = ExtResource( 2 )

[node name="Pine1-export" type="Sprite" parent="StaticBody2D"]
position = Vector2( 416, 304 )
scale = Vector2( 0.119767, 0.0976353 )
texture = ExtResource( 5 )

[node name="Pine2-export" type="Sprite" parent="StaticBody2D"]
position = Vector2( 416, 344 )
scale = Vector2( 0.121512, 0.0562814 )
texture = ExtResource( 3 )
__meta__ = {
"_edit_lock_": true
}

[node name="Cloud-export" type="Sprite" parent="StaticBody2D"]
position = Vector2( 407, 115 )
scale = Vector2( 0.120702, 0.120702 )
texture = ExtResource( 6 )

[node name="Label4" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -66.5
margin_top = -56.0
margin_right = 101.5
margin_bottom = 3.05176e-05
custom_fonts/font = ExtResource( 1 )
text = "BETA 1.2"

[node name="Label5" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -273.0
margin_top = -383.0
margin_right = -48.0
margin_bottom = -327.0
custom_fonts/font = ExtResource( 1 )
text = "Promocode:"

[node name="LineEdit" type="LineEdit" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -43.0
margin_top = 19.0
margin_right = 221.0
margin_bottom = 71.0
custom_fonts/font = ExtResource( 1 )

[node name="Exit" type="TextureButton" parent="."]
margin_left = 18.0
margin_top = 285.0
margin_right = 91.0
margin_bottom = 358.0
rect_scale = Vector2( 1.4, 1.4 )
texture_normal = ExtResource( 8 )
texture_pressed = ExtResource( 8 )
expand = true

[node name="Save" type="Button" parent="."]
margin_left = 296.0
margin_top = 288.0
margin_right = 404.0
margin_bottom = 344.0
custom_fonts/font = ExtResource( 1 )
text = "Save"
flat = true

[node name="load" type="Button" parent="."]
margin_left = 424.0
margin_top = 288.0
margin_right = 532.0
margin_bottom = 344.0
custom_fonts/font = ExtResource( 1 )
text = "Load"
flat = true

[connection signal="pressed" from="Exit" to="." method="_on_Exit_pressed"]
[connection signal="pressed" from="Save" to="." method="_on_Save_pressed"]
[connection signal="pressed" from="load" to="." method="_on_load_pressed"]
